# AT1-Criar-um-Perceptron-manual

./: README.md  main.py  pyproject.toml
notebooks/: perceptron_f1.ipynb  perceptron_quali_f1.ipynb
